[gd_scene load_steps=4 format=3 uid="uid://6b4oxkon5mjt"]

[ext_resource type="PackedScene" uid="uid://br5kr5h0352ku" path="res://Scenes/Turrets/turret_container.tscn" id="1_yrnfg"]
[ext_resource type="PackedScene" uid="uid://vv7y1y00eumv" path="res://Models/Turrets/Chiligun/chiligun.tscn" id="2_icqu4"]
[ext_resource type="Script" path="res://Scenes/Turrets/Chiligun/chili_gun_container.gd" id="2_lqarx"]

[node name="ChiliGunContainer" instance=ExtResource("1_yrnfg")]
script = ExtResource("2_lqarx")

[node name="Chiligun" parent="." index="0" instance=ExtResource("2_icqu4")]

[connection signal="area_entered" from="Chiligun" to="." method="_on_chiligun_area_entered"]
[connection signal="area_exited" from="Chiligun" to="." method="_on_chiligun_area_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/Idle" to="." method="_on_idle_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/Acquiring" to="." method="_on_acquiring_state_entered"]
[connection signal="state_processing" from="StateChart/CompoundState/Acquiring" to="." method="_on_acquiring_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/Attacking" to="." method="_on_attacking_state_entered"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Attacking" to="." method="_on_attacking_state_physics_processing"]
